Fix cumulative layout shift from header

--- a/static/css/webflow.css
+++ b/static/css/webflow.css
@@ -1807,3 +1807,6 @@ textarea.w-select {
 .w-condition-invisible {
   display: none !important;
 }
+nav.w-container {
+  height: 80px;
+}
